@@ -1,1 +1,1 @@
-/tmp/links_icons
+/home/netcast_icons/www
