@@ -1,1 +1,1 @@
-/mnt/usb1/Drive1/OpenLGTV_BCM/www
+/mnt/usb2/Drive1/OpenLGTV_BCM/www
